<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/Guestlist_Linear_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewGuestlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#F1EB9C"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp" >

            <LinearLayout
                android:id="@+id/guestlist_item_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvGuestlistName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="TextView"
                    android:textSize="23sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvGuestlistRelationship"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="TextView"
                    android:textSize="18sp"
                    android:textStyle="bold"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
