...
    <item android:title="Checklist"
        android:id="@+id/checklist"
        android:icon="@drawable/ic_baseline_playlist_add_check_24"/>
    <item android:title="Budget"
        android:id="@+id/budget"
        android:icon="@drawable/ic_baseline_calculate_24"/>
    <item android:title="Guestlist"
        android:id="@+id/guestlist"
        android:icon="@drawable/ic_baseline_emoji_people_24"/>
    <item android:title="Vendor"
        android:id="@+id/vendor"
        android:icon="@drawable/ic_baseline_people_alt_24"/>
</menu>
