<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:background="#FFE3E1">

    <TextView
        android:id="@+id/tvHomeTitle"
        android:layout_width="381dp"
        android:layout_height="87dp"
        android:fontFamily="cursive"
        android:text="My Dream Wedding"
        android:textAlignment="center"
        android:textColor="#FF9494"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:fontFamily="@font/andika"
        android:text="Mr / Mrs"
        android:textAlignment="center"
        android:textColor="#FF9494"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <TextView
        android:id="@+id/tvPartnerName"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:layout_marginStart="260dp"
        android:fontFamily="@font/andika"
        android:text="Mr / Mrs"
        android:textAlignment="center"
        android:textColor="#FF9494"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <TextView
        android:id="@+id/tvMarriageDate"
        android:layout_width="217dp"
        android:layout_height="48dp"
        android:fontFamily="cursive"
        android:text="Marriage Date"
        android:textAlignment="center"
        android:textColor="#FF9494"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <ImageView
        android:id="@+id/imIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <EditText
        android:id="@+id/etvName"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/andika"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textColor="#FF9494"
        android:textColorHint="#FF9494"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <EditText
        android:id="@+id/etvPartnerName"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/andika"
        android:hint="Partner's Name"
        android:inputType="textPersonName"
        android:textColor="#FF9494"
        android:textColorHint="#FF9494"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <EditText
        android:id="@+id/etvMarriageDate"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/andika"
        android:hint="Marriage Date (dd/mm/yyyy)"
        android:inputType="textPersonName"
        android:textColor="#FF9494"
        android:textColorHint="#FF9494"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:fontFamily="@font/andika"
        android:text="CLICK ME TO EDIT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

</androidx.constraintlayout.widget.ConstraintLayout>